[gd_scene load_steps=17 format=2]

[ext_resource path="res://Pixel Adventure 1/Free/Menu/Text/PressStart2P.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/start_screen.gd" type="Script" id=2]
[ext_resource path="res://Seasonal Tilesets/1 - Grassland/Background parts/5 - Sky_color.png" type="Texture" id=3]
[ext_resource path="res://Seasonal Tilesets/1 - Grassland/Background parts/1 - Foreground_scenery.png" type="Texture" id=4]
[ext_resource path="res://Seasonal Tilesets/1 - Grassland/Background parts/4 - Cloud_cover_2.png" type="Texture" id=5]
[ext_resource path="res://Seasonal Tilesets/1 - Grassland/Background parts/3 - Cloud_cover_1.png" type="Texture" id=6]
[ext_resource path="res://Seasonal Tilesets/1 - Grassland/Background parts/2 - Hills.png" type="Texture" id=7]
[ext_resource path="res://baseTileMap.tres" type="TileSet" id=8]
[ext_resource path="res://GodotPlatformer2D/Sounds/confirmation_001_wav.wav" type="AudioStream" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
shadow_color = Color( 0, 0, 0, 0 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxLine" id=3]
color = Color( 0, 0, 0, 0 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=6]
Button/colors/font_color = Color( 0.85098, 0.858824, 0.109804, 1 )
Button/colors/font_color_disabled = Color( 0.937255, 0.862745, 0.0509804, 1 )
Button/colors/font_color_focus = Color( 0.184314, 0.976471, 0.0235294, 1 )
Button/colors/font_color_hover = Color( 0.388235, 0.929412, 0.0509804, 0.0666667 )
Button/colors/font_color_pressed = Color( 0.839216, 0.101961, 0.811765, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = SubResource( 1 )
Button/styles/focus = SubResource( 2 )
Button/styles/hover = SubResource( 3 )
Button/styles/normal = SubResource( 4 )
Button/styles/pressed = SubResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 21
outline_size = 2
font_data = ExtResource( 1 )

[node name="start_screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="bg" type="Node2D" parent="."]

[node name="5-SkyColor" type="Sprite" parent="bg"]
position = Vector2( 228.75, 99.75 )
scale = Vector2( 1.69618, 1.08894 )
texture = ExtResource( 3 )

[node name="3-CloudCover1" type="Sprite" parent="bg"]
position = Vector2( 223.5, 71 )
scale = Vector2( 1.73264, 0.831731 )
texture = ExtResource( 6 )

[node name="4-CloudCover2" type="Sprite" parent="bg"]
position = Vector2( 235.25, 68 )
scale = Vector2( 1.65104, 0.831731 )
texture = ExtResource( 5 )

[node name="2-Hills" type="Sprite" parent="bg"]
position = Vector2( 216.25, 60 )
scale = Vector2( 1.72049, 1 )
texture = ExtResource( 7 )

[node name="1-ForegroundScenery" type="Sprite" parent="bg"]
position = Vector2( 232.5, 68 )
scale = Vector2( 1.60764, 1 )
texture = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -4.0
margin_top = -13.0
margin_right = 13.0
color = Color( 0, 0, 0, 0.509804 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 8 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -131075, 4, 0, -131074, 4, 0, -131073, 4, 0, -196608, 4, 0, -196607, 4, 0, -196606, 4, 0, -196605, 4, 0, -196604, 4, 0, -196603, 4, 0, -196602, 4, 0, -196601, 4, 0, -196600, 4, 0, -196599, 4, 0, -196598, 4, 0, -196597, 4, 0, -196596, 4, 0, -196595, 4, 0, -196594, 4, 0, -196593, 4, 0, -196592, 4, 0, -196591, 4, 0, -196590, 4, 0, -196589, 4, 0, -196588, 4, 0, -196587, 4, 0, -196586, 4, 0, -196585, 4, 0, -196584, 4, 0, -196583, 4, 0, -196582, 4, 0, -196581, 4, 0, -196580, 4, 0, -196579, -1610612732, 0, -196578, 4, 0, -196577, 4, 0, -65539, 4, 0, -65538, 4, 0, -65537, 4, 0, -131072, 4, 0, -131071, 4, 0, -131070, 4, 0, -131069, 4, 0, -131068, 4, 0, -131067, 4, 0, -131066, 4, 0, -131065, 4, 0, -131064, 4, 0, -131063, 4, 0, -131062, 4, 0, -131061, 4, 0, -131060, 4, 0, -131059, 4, 0, -131058, 4, 0, -131057, 4, 0, -131056, 4, 0, -131055, 4, 0, -131054, 4, 0, -131053, 4, 0, -131052, 4, 0, -131051, 4, 0, -131050, 4, 0, -131049, 4, 0, -131048, 4, 0, -131047, 4, 0, -131046, 4, 0, -131045, -1610612732, 0, -131044, 4, 0, -131043, -1610612732, 0, -131042, 4, 0, -131041, 4, 0, -3, 4, 0, -2, 4, 0, -1, 0, 0, -65536, 1, 0, -65535, 1, 0, -65534, 1, 0, -65533, 1, 0, -65532, 1, 0, -65531, 1, 0, -65530, 1, 0, -65529, 1, 0, -65528, 1, 0, -65527, 1, 0, -65526, 1, 0, -65525, 1, 0, -65524, 1, 0, -65523, 1, 0, -65522, 1, 0, -65521, 1, 0, -65520, 1, 0, -65519, 1, 0, -65518, 1, 0, -65517, 1, 0, -65516, -1073741819, 0, -65515, 1, 0, -65514, 1, 0, -65513, 1, 0, -65512, 1, 0, -65511, 1, 0, -65510, 1, 0, -65509, -1073741819, 0, -65508, 1, 0, -65507, -1073741816, 0, -65506, 4, 0, -65505, 4, 0, 65533, 4, 0, 65534, 4, 0, 65535, 1610612741, 0, 29, 5, 0, 30, 4, 0, 31, 4, 0, 131069, 4, 0, 131070, 4, 0, 131071, 1610612741, 0, 65565, 5, 0, 65566, 4, 0, 65567, 4, 0, 196605, 4, 0, 196606, 4, 0, 196607, 1610612741, 0, 131074, 13, 0, 131075, 14, 0, 131076, 15, 0, 131101, 5, 0, 131102, 4, 0, 131103, 4, 0, 262141, 4, 0, 262142, 4, 0, 262143, 1610612741, 0, 196610, 18, 0, 196611, 19, 0, 196612, 20, 0, 196637, 5, 0, 196638, 4, 0, 196639, 4, 0, 327677, 4, 0, 327678, 4, 0, 327679, 1610612741, 0, 262146, 18, 0, 262147, 19, 0, 262148, 20, 0, 262159, 13, 0, 262160, 14, 0, 262161, 15, 0, 262173, 5, 0, 262174, 4, 0, 262175, 4, 0, 393213, 4, 0, 393214, 4, 0, 393215, 1610612741, 0, 327682, 18, 0, 327683, 19, 0, 327684, 20, 0, 327695, 18, 0, 327696, 19, 0, 327697, 20, 0, 327709, 5, 0, 327710, 4, 0, 327711, 4, 0, 458749, 4, 0, 458750, 4, 0, 458751, 1610612741, 0, 393218, 18, 0, 393219, 19, 0, 393220, 20, 0, 393231, 18, 0, 393232, 19, 0, 393233, 20, 0, 393245, 5, 0, 393246, 4, 0, 393247, 4, 0, 524285, 4, 0, 524286, 4, 0, 524287, 1610612741, 0, 458752, 13, 0, 458753, 14, 0, 458754, 14, 0, 458755, 14, 0, 458756, 14, 0, 458757, 15, 0, 458767, 18, 0, 458768, 19, 0, 458769, 20, 0, 458770, 14, 0, 458771, 15, 0, 458781, 5, 0, 458782, 4, 0, 458783, 4, 0, 589821, 4, 0, 589822, 4, 0, 589823, 1610612741, 0, 524288, 1610612755, 0, 524289, 1610612755, 0, 524290, 1610612755, 0, 524291, 1610612755, 0, 524292, 1610612755, 0, 524293, 20, 0, 524294, 15, 0, 524302, 13, 0, 524303, 18, 0, 524304, 1610612755, 0, 524305, 1610612755, 0, 524306, 1610612755, 0, 524307, 20, 0, 524317, 5, 0, 524318, 4, 0, 524319, 4, 0, 655357, 4, 0, 655358, 4, 0, 655359, 1610612741, 0, 589824, 1610612755, 0, 589825, 1610612755, 0, 589826, 1610612755, 0, 589827, 1610612755, 0, 589828, 1610612755, 0, 589829, 19, 0, 589830, 20, 0, 589831, 13, 0, 589832, 14, 0, 589833, 14, 0, 589834, 14, 0, 589835, 14, 0, 589836, 14, 0, 589837, 15, 0, 589838, 18, 0, 589839, 1610612755, 0, 589840, 1610612755, 0, 589841, 1610612755, 0, 589842, 1610612755, 0, 589843, 20, 0, 589853, 5, 0, 589854, 4, 0, 589855, 4, 0, 720893, 4, 0, 720894, 4, 0, 720895, 1610612741, 0, 655360, 1610612755, 0, 655361, 1610612755, 0, 655362, 1610612755, 0, 655363, 1610612755, 0, 655364, 1610612755, 0, 655365, 19, 0, 655366, 20, 0, 655367, 1610612755, 0, 655368, 1610612755, 0, 655369, 1610612755, 0, 655370, 1610612755, 0, 655371, 1610612755, 0, 655372, 1610612755, 0, 655373, 1610612755, 0, 655374, 18, 0, 655375, 1610612755, 0, 655376, 1610612755, 0, 655377, 1610612755, 0, 655378, 1610612755, 0, 655379, 20, 0, 655380, 14, 0, 655381, 14, 0, 655382, 14, 0, 655383, 14, 0, 655384, 14, 0, 655385, 14, 0, 655386, 14, 0, 655387, 14, 0, 655388, 15, 0, 655389, 5, 0, 655390, 4, 0, 655391, 4, 0, 786429, 4, 0, 786430, 4, 0, 786431, 1610612741, 0, 720896, 1610612755, 0, 720897, 1610612755, 0, 720898, 1610612755, 0, 720899, 1610612755, 0, 720900, 1610612755, 0, 720901, 1610612755, 0, 720902, 1610612755, 0, 720903, 1610612755, 0, 720904, 1610612755, 0, 720905, 1610612755, 0, 720906, 1610612755, 0, 720907, 1610612755, 0, 720908, 1610612755, 0, 720909, 1610612755, 0, 720910, 19, 0, 720911, 1610612755, 0, 720912, 1610612755, 0, 720913, 1610612755, 0, 720914, 1610612755, 0, 720915, 1610612755, 0, 720916, 1610612755, 0, 720917, 1610612755, 0, 720918, 1610612755, 0, 720919, 1610612755, 0, 720920, 1610612755, 0, 720921, 1610612755, 0, 720922, 1610612755, 0, 720923, 1610612755, 0, 720924, 1610612755, 0, 720925, 5, 0, 720926, 4, 0, 720927, 4, 0, 851965, 4, 0, 851966, 4, 0, 851967, 1610612741, 0, 786432, 1610612755, 0, 786433, 1610612755, 0, 786434, 1610612755, 0, 786435, 1610612755, 0, 786436, 1610612755, 0, 786437, 1610612755, 0, 786438, 1610612755, 0, 786439, 1610612755, 0, 786440, 1610612755, 0, 786441, 1610612755, 0, 786442, 1610612755, 0, 786443, 1610612755, 0, 786444, 1610612755, 0, 786445, 1610612755, 0, 786446, 1610612755, 0, 786447, 1610612755, 0, 786448, 1610612755, 0, 786449, 1610612755, 0, 786450, 1610612755, 0, 786451, 1610612755, 0, 786452, 1610612755, 0, 786453, 1610612755, 0, 786454, 1610612755, 0, 786455, 1610612755, 0, 786456, 1610612755, 0, 786457, 1610612755, 0, 786458, 1610612755, 0, 786459, 1610612755, 0, 786460, 1610612755, 0, 786461, 5, 0, 786462, 4, 0, 786463, 4, 0, 917501, 4, 0, 917502, 4, 0, 917503, 1610612741, 0, 851968, 1610612755, 0, 851969, 1610612755, 0, 851970, 1610612755, 0, 851971, 1610612755, 0, 851972, 1610612755, 0, 851973, 1610612755, 0, 851974, 1610612755, 0, 851975, 1610612755, 0, 851976, 1610612755, 0, 851977, 1610612755, 0, 851978, 1610612755, 0, 851979, 1610612755, 0, 851980, 1610612755, 0, 851981, 1610612755, 0, 851982, 1610612755, 0, 851983, 1610612755, 0, 851984, 1610612755, 0, 851985, 1610612755, 0, 851986, 1610612755, 0, 851987, 1610612755, 0, 851988, 1610612755, 0, 851989, 1610612755, 0, 851990, 1610612755, 0, 851991, 1610612755, 0, 851992, 1610612755, 0, 851993, 1610612755, 0, 851994, 1610612755, 0, 851995, 1610612755, 0, 851996, 1610612755, 0, 851997, 5, 0, 851998, 4, 0, 851999, 4, 0, 983037, 4, 0, 983038, 4, 0, 983039, 1610612741, 0, 917504, 1610612755, 0, 917505, 1610612755, 0, 917506, 1610612755, 0, 917507, 1610612755, 0, 917508, 1610612755, 0, 917509, 1610612755, 0, 917510, 1610612755, 0, 917511, 1610612755, 0, 917512, 1610612755, 0, 917513, 1610612755, 0, 917514, 1610612755, 0, 917515, 1610612755, 0, 917516, 1610612755, 0, 917517, 1610612755, 0, 917518, 1610612755, 0, 917519, 1610612755, 0, 917520, 1610612755, 0, 917521, 1610612755, 0, 917522, 1610612755, 0, 917523, 1610612755, 0, 917524, 1610612755, 0, 917525, 1610612755, 0, 917526, 1610612755, 0, 917527, 1610612755, 0, 917528, 1610612755, 0, 917529, 1610612755, 0, 917530, 1610612755, 0, 917531, 1610612755, 0, 917532, 1610612755, 0, 917533, 5, 0, 917534, 4, 0, 917535, 4, 0, 1048573, 4, 0, 1048574, 1610612740, 0, 1048575, 1610612741, 0, 983040, 1610612755, 0, 983041, 1610612755, 0, 983042, 1610612755, 0, 983043, 1610612755, 0, 983044, 1610612755, 0, 983045, 1610612755, 0, 983046, 1610612755, 0, 983047, 1610612755, 0, 983048, 1610612755, 0, 983049, 1610612755, 0, 983050, 1610612755, 0, 983051, 1610612755, 0, 983052, 1610612755, 0, 983053, 1610612755, 0, 983054, 1610612755, 0, 983055, 1610612755, 0, 983056, 1610612755, 0, 983057, 1610612755, 0, 983058, 1610612755, 0, 983059, 1610612755, 0, 983060, 1610612755, 0, 983061, 1610612755, 0, 983062, 1610612755, 0, 983063, 1610612755, 0, 983064, 1610612755, 0, 983065, 1610612755, 0, 983066, 1610612755, 0, 983067, 1610612755, 0, 983068, 1610612755, 0, 983069, 5, 0, 983070, 4, 0, 983071, 4, 0, 1114109, 4, 0, 1114110, 4, 0, 1114111, -1610612728, 0, 1048576, 7, 0, 1048577, 7, 0, 1048578, 7, 0, 1048579, 7, 0, 1048580, 7, 0, 1048581, 7, 0, 1048582, 7, 0, 1048583, 7, 0, 1048584, 7, 0, 1048585, 7, 0, 1048586, 7, 0, 1048587, 7, 0, 1048588, 7, 0, 1048589, 7, 0, 1048590, 7, 0, 1048591, 7, 0, 1048592, 7, 0, 1048593, 7, 0, 1048594, 7, 0, 1048595, 7, 0, 1048596, 7, 0, 1048597, 7, 0, 1048598, 7, 0, 1048599, 7, 0, 1048600, 7, 0, 1048601, 7, 0, 1048602, 7, 0, 1048603, 7, 0, 1048604, 7, 0, 1048605, 1610612736, 0, 1048606, 4, 0, 1048607, 4, 0, 1179645, 4, 0, 1179646, 4, 0, 1179647, 4, 0, 1114112, 4, 0, 1114113, 4, 0, 1114114, 4, 0, 1114115, 4, 0, 1114116, 4, 0, 1114117, 4, 0, 1114118, 4, 0, 1114119, 4, 0, 1114120, 4, 0, 1114121, 4, 0, 1114122, 4, 0, 1114123, 4, 0, 1114124, 4, 0, 1114125, 4, 0, 1114126, 4, 0, 1114127, 4, 0, 1114128, 4, 0, 1114129, 4, 0, 1114130, 4, 0, 1114131, 4, 0, 1114132, 4, 0, 1114133, 4, 0, 1114134, 4, 0, 1114135, 4, 0, 1114136, 4, 0, 1114137, 4, 0, 1114138, 4, 0, 1114139, 4, 0, 1114140, 4, 0, 1114141, 4, 0, 1114142, 4, 0, 1114143, 4, 0, 1245181, 4, 0, 1245182, 4, 0, 1245183, 4, 0, 1179648, 4, 0, 1179649, 4, 0, 1179650, 4, 0, 1179651, 4, 0, 1179652, 4, 0, 1179653, 4, 0, 1179654, 4, 0, 1179655, 4, 0, 1179656, 4, 0, 1179657, 4, 0, 1179658, 4, 0, 1179659, 4, 0, 1179660, 4, 0, 1179661, 4, 0, 1179662, 4, 0, 1179663, 4, 0, 1179664, 4, 0, 1179665, 4, 0, 1179666, 4, 0, 1179667, 4, 0, 1179668, 4, 0, 1179669, 4, 0, 1179670, 4, 0, 1179671, 4, 0, 1179672, 4, 0, 1179673, 4, 0, 1179674, 4, 0, 1179675, 4, 0, 1179676, 4, 0, 1179677, 4, 0, 1179678, 4, 0, 1179679, 4, 0 )

[node name="controls" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="StartBTN" type="Button" parent="controls"]
margin_top = 92.0
margin_right = 455.0
margin_bottom = 113.0
focus_neighbour_top = NodePath("../QuitBTN4")
theme = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.184314, 0.976471, 0.0235294, 1 )
custom_colors/font_color_pressed = Color( 0.952941, 0.0509804, 0.0509804, 1 )
custom_fonts/font = SubResource( 7 )
text = "Start"

[node name="controlsBTN" type="Button" parent="controls"]
margin_top = 117.0
margin_right = 455.0
margin_bottom = 138.0
theme = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.184314, 0.976471, 0.0235294, 1 )
custom_colors/font_color_pressed = Color( 0.952941, 0.0509804, 0.0509804, 1 )
custom_fonts/font = SubResource( 7 )
text = "Controls"

[node name="QuitBTN4" type="Button" parent="controls"]
margin_top = 142.0
margin_right = 455.0
margin_bottom = 163.0
focus_neighbour_bottom = NodePath("../StartBTN")
theme = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.184314, 0.976471, 0.0235294, 1 )
custom_colors/font_color_pressed = Color( 0.952941, 0.0509804, 0.0509804, 1 )
custom_fonts/font = SubResource( 7 )
text = "Quit"

[node name="start_fx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -15.0

[node name="control_fx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -15.0

[node name="quit_fx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -15.0

[connection signal="pressed" from="controls/StartBTN" to="." method="_on_StartBTN_pressed"]
[connection signal="pressed" from="controls/controlsBTN" to="." method="_on_controlsBTN_pressed"]
[connection signal="pressed" from="controls/QuitBTN4" to="." method="_on_QuitBTN4_pressed"]
